[metadata]
name = pybuben
version = attr: pybuben.__version__

[options]
install_requires =
    sly
extras_require.develop =
    parameterized
entry_points = file: entry_points.cfg

[options.entry_points]
console_scripts =
    pybconv = pybuben.cli_aybuben_converter:main
    pybconv_dev = pybuben.cli_aybuben_converter:main

