[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybuben-core"
version = "0.1.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "sly>=0.4",
    "ordered-set>=4.0.2"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "parameterized>=0.8.1"
]

[project.scripts]
pybubenconv = "pybuben.cli.converter:main"
pybubencoll = "pybuben.cli.collector:main"
