[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybuben-deeplearning"
version = "0.1.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "numpy>=1.21.3",
    "matplotlib>=3.4.3"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "notebook>=6.4.6",
    # "chainer>=7.8.0"
]

[tool.setuptools.packages.find]
include = ["pybuben"]
